--- a/src/CSS/index.css
+++ b/src/CSS/index.css
@@ -1,4 +1,6 @@
-/* html {
+/* 
+uncomment section for scroll snap
+html {
   scroll-snap-type: y mandatory;
   scroll-padding-top: 50px;
 }
@@ -31,7 +33,7 @@ section {
 span {
   font-weight: 800;
 }
-.about-container {
+.sub-container {
   padding-top: 7rem;
   padding-left: 5.9rem !important;
 }
@@ -42,7 +44,7 @@ span {
   font-size: 3.6rem;
   font-weight: 900;
 }
-.about-title-line {
+.line {
   padding-left: 1rem;
   width: 100%;
   height: 1px;
@@ -58,10 +60,17 @@ span {
 }
 .about-content > p:first-child::first-letter {
   border-radius: 0.4rem;
-  padding: 0.5rem;
+  padding: 0.7rem;
   margin-right: 0.3rem;
   background-color: #212529;
   font-weight: 700;
   float: left;
-  font-size: 1rem;
+  font-size: 1.5rem;
+}
+.project-title {
+  display: flex;
+  align-items: center;
+  gap: 2.4rem;
+  font-size: 3.6rem;
+  font-weight: 900;
 }
