--- a/src/CSS/index.css
+++ b/src/CSS/index.css
@@ -10,6 +10,9 @@ section {
 .main-body {
   background-color: #282c34;
 }
+.text-green {
+  color: #15a347 !important;
+}
 .home-container {
   padding-top: 8rem;
   padding-left: 5.9rem !important;
@@ -37,7 +40,7 @@ span {
   padding-top: 7rem;
   padding-left: 5.9rem !important;
 }
-.about-title {
+.heading-title {
   display: flex;
   align-items: center;
   gap: 2.4rem;
@@ -57,6 +60,7 @@ span {
 }
 .about-content {
   text-align: justify;
+  font-weight: 200;
 }
 .about-content > p:first-child::first-letter {
   border-radius: 0.4rem;
@@ -67,10 +71,37 @@ span {
   float: left;
   font-size: 1.5rem;
 }
+.project-card {
+  width: 29% !important;
+}
+.project-card > .card {
+  border-radius: 0.8rem;
+  overflow: hidden;
+}
+.project-card-img {
+  width: 85% !important;
+  margin-inline: auto;
+  margin-top: 3.5rem;
+  margin-bottom: -3.5rem;
+}
 .project-title {
   display: flex;
   align-items: center;
-  gap: 2.4rem;
-  font-size: 3.6rem;
-  font-weight: 900;
+  gap: 1.2rem;
+}
+.project-title > div:first-child {
+  font-weight: 700;
+}
+.project-container {
+  margin-block: 1.6rem;
+}
+.project-container > div:not(:first-child) {
+  font-size: 1.05rem;
+}
+.project-language {
+  font-weight: 600;
+  margin-block: 0.8rem;
+}
+.project-content {
+  font-weight: 200;
 }
