add smooth scrolling

--- a/src/CSS/index.css
+++ b/src/CSS/index.css
@@ -7,6 +7,9 @@ html {
 section {
   scroll-snap-align: start;
 } */
+html {
+  scroll-behavior: smooth;
+}
 body {
   background-color: #20242b !important;
 }
