added modal animation

--- a/src/CSS/index.css
+++ b/src/CSS/index.css
@@ -208,6 +208,21 @@ body {
   max-width: 35% !important;
   margin-block: 3.5rem !important;
 }
+@keyframes pop {
+  0% {
+    opacity: 0;
+    top: 100px;
+  }
+  80% {
+    top: 5px;
+  }
+}
+.modal-pop {
+  animation-name: pop;
+  animation-duration: 0.25s;
+  animation-timing-function: ease-in-out;
+  transition: top 0.25s, opacity 0.25s !important;
+}
 .modal-header {
   overflow: hidden;
 }
